--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,14 @@
 .container {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 10px 10px;
+  margin: 10px 0;
+}
 
-  margin: 1rem 1rem 1rem 1.5rem;
+@media (max-width: 481px) {
+  .container {
+    margin: 10px auto;
+  }
 }
