--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -26,6 +26,7 @@
   max-height: 90vh;
 	transform: translate(-50%, -50%);
 	overflow: scroll;
+  border-radius: 8px;
 	background-color: white;
 	z-index: 1000;
 }
